RBM Business Landing Features Fix 11132015 - adjusted image wrap on hover

--- a/public/css/business/landing/responsive.css
+++ b/public/css/business/landing/responsive.css
@@ -69,6 +69,12 @@
         #banner {
             height: 780px;
         }
+        #featherq-features img {
+            margin: auto;
+        }
+        .details {
+            height: 190px;
+        }
     }
 
     @media only screen and (max-width : 320px) {
